# rustcop

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  example_file.md  rustcop.toml  rustfmt.toml
cargo-rustcop/: Cargo.toml
cargo-rustcop/src/: main.rs
examples/: sarif_suppression_example.rs  suppression_demo.rs
rustcop/: Cargo.toml
rustcop-macros/: Cargo.toml  README.md
rustcop-macros/src/: lib.rs
rustcop/examples/: unused_suppression_example.rs  unused_suppression_sarif_example.rs
rustcop/src/: config.rs  diagnostic.rs  files.rs  lib.rs  output.rs  suppression.rs
rustcop/src/rules/: exports.rs  imports.rs  mod.rs  modules.rs  super_imports.rs  wildcard_imports.rs
src/: config.rs  diagnostic.rs  files.rs  lib.rs  main.rs
src/rules/: imports.rs  mod.rs
