[workspace]
resolver = "2"
members = [ 'rustcop' ]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Rust style linter and formatter inspired by C#'s StyleCop"
keywords = ["linter", "formatter", "rustcop", "style", "rustfmt"]
authors = ["Travis Sharp <travis@kuipersys.com>"]
repository = "https://github.com/tsharp/rustcop"
readme = "README.md"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
walkdir = "2"
colored = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"