[workspace]
resolver = "2"
members = [ 'rustcop', 'rustcop-macros' ]

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Rust style linter and formatter inspired by C#'s StyleCop"
keywords = ["linter", "formatter", "rustcop", "style", "rustfmt"]
authors = ["Travis Sharp <travis@kuipersys.com>"]
repository = "https://github.com/tsharp/rustcop"
readme = "README.md"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
colored = "2"
globset = "0.4"
serde-sarif = "0.7"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"