[package]
name = "cargo-rustcop"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "cargo-rustcop"
path = "src/main.rs"

[dependencies]
rustcop.workspace = true